swap bracket and brace

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -6,13 +6,13 @@
 #define COMBO_TERM_SLOW 40
 
 ZMK_COMBO(lpar,  &kp LPAR,      LT2 LT3,     DEF NAV NUM, COMBO_TERM_FAST)
-ZMK_COMBO(lbkt,  &kp LBKT,      LM2 LM3,     DEF NAV NUM, COMBO_TERM_FAST)
-ZMK_COMBO(lbrc,  &kp LBRC,      LB2 LB3,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(lbrc,  &kp LBRC,      LM2 LM3,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(lbkt,  &kp LBKT,      LB2 LB3,     DEF NAV NUM, COMBO_TERM_FAST)
 ZMK_COMBO(lt,    &kp LT,        LT2 LM1,     DEF NAV NUM, COMBO_TERM_FAST)
 
 ZMK_COMBO(rpar,  &kp RPAR,      RT2 RT3,     DEF NAV NUM, COMBO_TERM_FAST)
-ZMK_COMBO(rbkt,  &kp RBKT,      RM2 RM3,     DEF NAV NUM, COMBO_TERM_FAST)
-ZMK_COMBO(rbrc,  &kp RBRC,      RB2 RB3,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(rbrc,  &kp RBRC,      RM2 RM3,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(rbkt,  &kp RBKT,      RB2 RB3,     DEF NAV NUM, COMBO_TERM_FAST)
 ZMK_COMBO(gt,    &kp GT,        RT2 RM1,     DEF NAV NUM, COMBO_TERM_FAST)
 
 ZMK_COMBO(excl,  &kp EXCL,      LT4 LM4,     DEF NAV NUM, COMBO_TERM_SLOW)
