--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -5,29 +5,42 @@
 #define COMBO_TERM_FAST 40 
 #define COMBO_TERM_SLOW 40
 
-ZMK_COMBO(esc,   &kp ESC,       LT2 LT3,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(esc,   &kp ESC,       LM2 LM3,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(enter, &kp RET,       LM1 LM2,     DEF NAV NUM, COMBO_TERM_FAST)
 
-ZMK_COMBO(lpar,  &kp LPAR,      LM1 LM2,     DEF NAV NUM, COMBO_TERM_FAST)
-ZMK_COMBO(lbrc,  &kp LBRC,      LM2 LM3,     DEF NAV NUM, COMBO_TERM_FAST)
-ZMK_COMBO(lbkt,  &kp LBKT,      LB2 LB3,     DEF NAV NUM, COMBO_TERM_FAST)
-ZMK_COMBO(lt,    &kp LT,        LT2 LM1,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(lpar,  &kp LPAR,      RT0 RT1,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(rpar,  &kp RPAR,      RT1 RT2,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(lbrc,  &kp LBRC,      RM0 RM1,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(rbrc,  &kp RBRC,      RM1 RM2,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(lbkt,  &kp LBKT,      RB0 RB1,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(rbkt,  &kp RBKT,      RB0 RB1,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(lt,    &kp LT,        RT1 RM0,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(gt,    &kp GT,        RT1 RM2,     DEF NAV NUM, COMBO_TERM_FAST)
 
-ZMK_COMBO(enter, &kp RET,       RT2 RT3,     DEF NAV NUM, COMBO_TERM_FAST)
+// number row
+// ZMK_COMBO(excl,  &kp EXCL,      LB4 LM4,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(at,    &kp AT,        LB3 LM3,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(hash,  &kp HASH,      LB2 LM2,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(dllr,  &kp DLLR,      LB1 LM1,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(prcnt, &kp PRCNT,     LB0 LM0,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(caret, &kp CARET,     RB0 RM0,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(amps,  &kp AMPS,      RB1 RM1,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(star,  &kp STAR,      RB2 RM2,     DEF NAV NUM, COMBO_TERM_SLOW)
 
-ZMK_COMBO(rpar,  &kp RPAR,      RM1 RM2,     DEF NAV NUM, COMBO_TERM_FAST)
-ZMK_COMBO(rbrc,  &kp RBRC,      RM2 RM3,     DEF NAV NUM, COMBO_TERM_FAST)
-ZMK_COMBO(rbkt,  &kp RBKT,      RB2 RB3,     DEF NAV NUM, COMBO_TERM_FAST)
-ZMK_COMBO(gt,    &kp GT,        RT2 RM1,     DEF NAV NUM, COMBO_TERM_FAST)
+/* Vertical combos - left hand */
 
-ZMK_COMBO(excl,  &kp EXCL,      LT4 LM4,     DEF NAV NUM, COMBO_TERM_SLOW)
-ZMK_COMBO(at,    &kp AT,        LT3 LM3,     DEF NAV NUM, COMBO_TERM_SLOW)
-ZMK_COMBO(hash,  &kp HASH,      LT2 LM2,     DEF NAV NUM, COMBO_TERM_SLOW)
-ZMK_COMBO(dllr,  &kp DLLR,      LT1 LM1,     DEF NAV NUM, COMBO_TERM_SLOW)
-ZMK_COMBO(prcnt, &kp PRCNT,     LT0 LM0,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(grave, &kp GRAVE,     LM2 LT2,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(tilde, &kp TILDE,     LM3 LT3,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(bslh,  &kp BSLH,      LM1 LT1,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(pipe,  &kp PIPE,      LM0 LT0,     DEF NAV NUM, COMBO_TERM_SLOW)
 
-ZMK_COMBO(caret, &kp CARET,     RT0 RM0,     DEF NAV NUM, COMBO_TERM_SLOW)
-ZMK_COMBO(amps,  &kp AMPS,      RT1 RM1,     DEF NAV NUM, COMBO_TERM_SLOW)
-ZMK_COMBO(star,  &kp STAR,      RT2 RM2,     DEF NAV NUM, COMBO_TERM_SLOW)
+/* Vertical combos - right hand */
+
+ZMK_COMBO(under, &kp UNDER,     RM0 RT0,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(minus, &kp MINUS,     RM1 RT1,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(equal, &kp EQUAL,     RM2 RT2,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(plus,  &kp PLUS,      RM3 RT3,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(slash, &kp SLASH,     RT4 RT5,     DEF NAV NUM, COMBO_TERM_SLOW)
 
 // make homerow combos tap-only (so HRMs can be chorded instantaneously)
 // #define HRC_TAB    &hml         LA(LCTRL) TAB
