fix homerow mod combo

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -8,7 +8,7 @@
 // make homerow combos tap-only (so HRMs can be chorded instantaneously)
 #define HRC_ESC    &hml         LA(LGUI) ESC
 #define HRC_RET    &hml         LS(LGUI) RET
-#define HRC_RPAR   &hmr         RS(LGUI) RPAR
+#define HRC_RBRC   &hmr         RS(LGUI) RBRC
 
 ZMK_COMBO(esc,   HRC_ESC,       LM2 LM3,     DEF NAV NUM, COMBO_TERM_FAST)
 ZMK_COMBO(enter, HRC_RET,       LM1 LM2,     DEF NAV NUM, COMBO_TERM_FAST)
@@ -18,9 +18,9 @@ ZMK_COMBO(down,  &kp DOWN,      LB1 LB2,     DEF NAV NUM, COMBO_TERM_FAST)
 ZMK_COMBO(right, &kp RIGHT,     LB0 LB1,     DEF NAV NUM, COMBO_TERM_FAST)
 
 ZMK_COMBO(lpar,  &kp LPAR,      RT0 RT1,     DEF NAV NUM, COMBO_TERM_FAST)
-ZMK_COMBO(rpar,  HRC_RPAR,      RT1 RT2,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(rpar,  &kp RPAR,      RT1 RT2,     DEF NAV NUM, COMBO_TERM_FAST)
 ZMK_COMBO(lbrc,  &kp LBRC,      RM0 RM1,     DEF NAV NUM, COMBO_TERM_FAST)
-ZMK_COMBO(rbrc,  &kp RBRC,      RM1 RM2,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(rbrc,  HRC_RBRC,      RM1 RM2,     DEF NAV NUM, COMBO_TERM_FAST)
 ZMK_COMBO(lbkt,  &kp LBKT,      RB0 RB1,     DEF NAV NUM, COMBO_TERM_FAST)
 ZMK_COMBO(rbkt,  &kp RBKT,      RB0 RB1,     DEF NAV NUM, COMBO_TERM_FAST)
 ZMK_COMBO(lt,    &kp LT,        RT1 RM0,     DEF NAV NUM, COMBO_TERM_FAST)
