--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -10,6 +10,8 @@
 #define HRC_RET    &hml         LS(LGUI) RET
 #define HRC_RBRC   &hmr         RS(LGUI) RBRC
 
+ZMK_COMBO(rcmd_a, &rcmd A, LH1 LM4, ALL, COMBO_TERM_FAST)
+
 ZMK_COMBO(hammer_vim, &kp LA(LG(ESC)), LH1 LH2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(homerow, &kp LA(LC(LS(R))), LH0 LH1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(homerow_search, &kp LA(LC(LS(SLASH))), LH1 LB0, ALL, COMBO_TERM_FAST)
