--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -34,7 +34,7 @@ ZMK_COMBO(rcmd_a, &rcmd A, LH1 LM4, ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(rcmd_c, &rcmd C, LH1 LB2, ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(rcmd_d, &rcmd D, LH1 LB1, ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(rcmd_v, &rcmd V, LH1 LB0, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(rcmd_k, &rcmd K, LH1 RB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(rcmd_k, &rcmd K, LH1 RB0, ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(rcmd_h, &rcmd H, LH1 RB1, ALL, COMBO_TERM_FAST)
 
 ZMK_COMBO(hammer_vim, &kp LA(LG(ESC)), LH1 LH2, ALL, COMBO_TERM_FAST)
