--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -8,14 +8,18 @@
 // make homerow combos tap-only (so HRMs can be chorded instantaneously)
 #define HRC_ESC    &hml         LA(LGUI) ESC
 #define HRC_RET    &hml         LS(LGUI) RET
-#define HRC_RBRC   &hmr         RS(LGUI) RBRC
+#define HRC_RBRC   &hmr         LS(LGUI) RBRC
 
+ZMK_COMBO(rcmd_p, &rcmd P, LH1 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_k, &rcmd K, LH1 RB0, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_a, &rcmd A, LH1 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(rcmd_f, &rcmd F, LH1 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(rcmd_s, &rcmd S, LH1 LM2, ALL, COMBO_TERM_FAST)
+
 ZMK_COMBO(rcmd_q, &rcmd Q, LH1 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_w, &rcmd W, LH1 LT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(rcmd_f, &rcmd F, LH1 LT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(rcmd_p, &rcmd P, LH1 LT1, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(rcmd_f, &rcmd F, LH1 LT2, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(rcmd_p, &rcmd P, LH1 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_b, &rcmd B, LH1 LT0, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_j, &rcmd J, LH1 RT0, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_l, &rcmd L, LH1 RT1, ALL, COMBO_TERM_FAST)
@@ -23,7 +27,7 @@ ZMK_COMBO(rcmd_u, &rcmd U, LH1 RT2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_y, &rcmd Y, LH1 RT3, ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(rcmd_a, &rcmd A, LH1 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_r, &rcmd R, LH1 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(rcmd_s, &rcmd S, LH1 LM2, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(rcmd_s, &rcmd S, LH1 LM2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_t, &rcmd T, LH1 LM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_g, &rcmd G, LH1 LM0, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_m, &rcmd M, LH1 RM0, ALL, COMBO_TERM_FAST)
