--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -15,8 +15,10 @@ ZMK_COMBO(rcmd_k, &rcmd K, LH1 RB0, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_a, &rcmd A, LH1 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_f, &rcmd F, LH1 LT2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_s, &rcmd S, LH1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(rcmd_o, &rcmd O, LH1 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(rcmd_t, &rcmd T, LH1 LM1, ALL, COMBO_TERM_FAST)
 
-ZMK_COMBO(rcmd_q, &rcmd Q, LH1 LT4, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(rcmd_q, &rcmd Q, LH1 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_w, &rcmd W, LH1 LT3, ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(rcmd_f, &rcmd F, LH1 LT2, ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(rcmd_p, &rcmd P, LH1 LT1, ALL, COMBO_TERM_FAST)
@@ -28,13 +30,13 @@ ZMK_COMBO(rcmd_y, &rcmd Y, LH1 RT3, ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(rcmd_a, &rcmd A, LH1 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_r, &rcmd R, LH1 LM3, ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(rcmd_s, &rcmd S, LH1 LM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(rcmd_t, &rcmd T, LH1 LM1, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(rcmd_t, &rcmd T, LH1 LM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_g, &rcmd G, LH1 LM0, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_m, &rcmd M, LH1 RM0, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_n, &rcmd N, LH1 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_e, &rcmd E, LH1 RM2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_i, &rcmd I, LH1 RM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(rcmd_o, &rcmd O, LH1 RM4, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(rcmd_o, &rcmd O, LH1 RM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_z, &rcmd Z, LH1 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_x, &rcmd X, LH1 LB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_c, &rcmd C, LH1 LB2, ALL, COMBO_TERM_FAST)
