--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -15,8 +15,8 @@ ZMK_COMBO(rcmd_t, &rcmd T, LH1 LM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_p, &rcmd P, LH1 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_k, &rcmd K, LH1 RB0, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_a, &rcmd A, LH1 LM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(rcmd_f, &rcmd F, LH1 LT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(rcmd_s, &rcmd S, LH1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(rcmd_f, &rcmd2 F, LH1 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(rcmd_s, &rcmd2 S, LH1 LM2, ALL, COMBO_TERM_FAST)
 
 // ZMK_COMBO(rcmd_q, &rcmd Q, LH1 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rcmd_w, &rcmd W, LH1 LT3, ALL, COMBO_TERM_FAST)
