--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,3 +4,5 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 CONFIG_ZMK_KEYBOARD_NAME="jerryCorne"
+
+CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=512
