--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,3 +6,6 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_KEYBOARD_NAME="jerryCorne"
 
 CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=512
+
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=256
+CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=16
