fix mute, add ff and rw

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -231,7 +231,7 @@ ZMK_COMBO(bri_dn,   &kp C_BRI_DN,       LM1 LM2 LM3,     ALL, COMBO_TERM_FAST)
 // ********************************************************
 ZMK_COMBO(vol_up,   &kp C_VOL_UP,       RT1 RT2 RT3,     ALL, COMBO_TERM_FAST)
 ZMK_COMBO(vol_dn,    &kp C_VOL_DN,       RM1 RM2 RM3,     ALL, COMBO_TERM_FAST)
-ZMK_COMBO(mute,   &kp C_MUTE,       RM1 RB2 RB3,     ALL, COMBO_TERM_FAST)
+ZMK_COMBO(mute,   &kp C_MUTE,       RB1 RB2 RB3,     ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // right horizontal middle + ring + pinky fingers
@@ -267,8 +267,8 @@ ZMK_COMBO(pp,   &kp C_PP,       RM2 RB3 RB4,     ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(esc,   HRC_ESC,       LB1 LM2 LB3,     ALL, COMBO_TERM_FAST)
 
 // right index + middle + ring fingers
-// ZMK_COMBO(esc,   HRC_ESC,       RM1 RT2 RM3,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       RB1 RM2 RB3,     ALL, COMBO_TERM_FAST)
+ZMK_COMBO(rw,   &kp C_RW,       RM1 RT2 RM3,     ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ff,   &kp C_FF,       RB1 RM2 RB3,     ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // four finger horizontal combos
