add more combos for shift

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -332,3 +332,13 @@ ZMK_COMBO(s_w, &kp LS(W), RH1 LT3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_x, &kp LS(X), RH1 LB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_y, &kp LS(Y), RH1 RT3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_z, &kp LS(Z), RH1 LB4, ALL, COMBO_TERM_FAST)
+
+ZMK_COMBO(s_semicolon, &kp SEMICOLON, RH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_colon, &kp COLON, RH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_excl, &kp EXCL, RH1 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_dqt, &kp EXCL, RH1 RT4, ALL, COMBO_TERM_FAST)
+
+ZMK_COMBO(s_up, &kp LS(UP), RH1 RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_down, &kp LS(DOWN), RH1 RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_left, &kp LS(LEFT), RH1 RM1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_right, &kp LS(RIGHT), RH1 RM3 RM4, ALL, COMBO_TERM_FAST)
